# simple-fastfy-bot

./: .gitignore  .pre-commit-config.yaml  amvera.yml  future.txt  main.py  pyproject.toml  requirements.txt
bot/: constant.py  logging_.py  types.py
bot/alert/: __init__.py  alerts.py
bot/core/: .env  bot.py  config.py  gen.py  prod.env  test.env  timezone.py
bot/db/: json_storage.py  session.py  storage.py
bot/db/models/: __init__.py  base.py  mixins.py  model.py
bot/db/repository/: __init__.py  abstract_repository.py  repository.py  skin_price_history_rep.py  skin_rep.py  skin_repository.py  user_rep.py  user_repository.py  user_skin_rep.py
bot/db/storage/: data.db  worker.json
bot/exception/: __init__.py  abstract_eception.py  exep.py
bot/handlers/: __init__.py  dependency.py
bot/handlers/callback/: router.py  service.py
bot/handlers/command/: router.py  service.py
bot/handlers/state/: router.py  service.py
bot/log/: logging_.py
bot/logs/: logging_.py
bot/middleware/: __init__.py  depends.py  log.py  logging.py  timeout.py
bot/responses/: __init__.py  abstract.py  error.py  response.py  success.py
bot/schemas/: __init__.py  base.py  enums.py  schema.py
bot/utils/: chart.py  compress.py  limit_callback.py
bot/worker/: monitoring.py
data/: data.db
hook/: check_test_mode.bat
migrations/: env.py
migrations/versions/: 0d374b570e4b_add_percent.py  1765df165ab3_delete_skins_image.py  1e6939a657b0_fix_skins_owner.py  2f8e64b5c37b_init.py  7a40b045b95c_last_update_in_skins.py  8a4a9f82a175_price_chart_to_string.py  b47120191ae7_init.py
(+61 files in other folders)
